CHANGES IN VERSION 1.19
-----------------------

NEW FEATURES

    o (1.19.9) Update deprecated check to check for Bioconductor release and
    devel deprecated packages as specified in biocViews
    o (1.19.7) More helpful ERROR when using a non valid command line option.
    o (1.19.4) All checks module. Ability to turn on/off with flag options. See
    'R CMD BiocCheck --help'
    o (1.19.1) New Check options to turn off if in CRAN (--no-check-CRAN) and
    Bioconductor mailing list and support site (--no-check-bioc-help)

USER SIGNIFICANT CHANGES

    o (1.19.8) Updated Documentation in vignette for flag/option controls and
    reorganization of code/checks. Grouped similar checks together and changed
    order of checks.
    o (1.19.3) Remove Native Routine Registrations (use flag in R CMD check
    instead _R_CHECK_NATIVE_ROUTINE_REGISTRATION_)
    o (1.19.2) Match CRAN standards of package size <= 5MB (updated from 4MB)

BUG FIXES

    o (1.19.14) Fix ERROR when more than one VignetteEngine found 
    o (1.19.10) Add suggestion of FormatR package to formatting notes
    o (1.19.10) Fix function lengths to be a NOTE and only display if functions
    are greater than 50 lines long. 
    o (1.19.6) Replace use of devtools::create with usethis::create_package as
    function was deprecated.
    o (1.19.5) Fix length > 1 logical comparison in if statement

CHANGES IN VERSION 1.17
-----------------------

NEW FEATURES

    o (1.17.21) Added quit-with-status option to both BiocCheck and
    BiocCheckGitClone for compatibility with travis

    o (1.17.18) Update devel to use BiocManager instructions instead of
    BiocInstaller

    o (1.17.17) Add a new function that can be run interactive or command line
    BiocCheckGitClone which is only run on a source directory not a
    tarball. This will check for bad system files

    o (1.17.17) BiocCheck addition: Checks vignette directory for intermediate
    and end files that should not be included.
